--- a/schedule/index.html
+++ b/schedule/index.html
@@ -48,6 +48,9 @@ a:hover {
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_partials.html" target="_blank">CLP3 Sections 2.1 &mdash; 2.3</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial01.pdf" target="_blank">Tutorial sheet 01</a>
+					</li>
 				</ul>
 			</td>
 		</tr>
