--- a/schedule/index.html
+++ b/schedule/index.html
@@ -51,6 +51,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial01.pdf" target="_blank">Tutorial sheet 01</a>
 					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial01_solutions.pdf" target="_blank">Tutorial sheet 01 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>
