--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,6 +54,9 @@ a:hover {
 					<!-- <li>
 						<a href="../tutorials/tutorial01_solutions.pdf" target="_blank">Tutorial sheet 01 solutions</a>
 					</li> -->
+					<li>
+						<a href="https://cocalc.com/share/public_paths/fb0010a374214b0c522563fb3a08abf3a3cf0910" target="_blank">CoCalc Sage worksheet</a> for investigating surface plots
+					</li>
 				</ul>
 			</td>
 		</tr>
@@ -71,6 +74,12 @@ a:hover {
 					Recommended reading:
 					<a href="https://killianobrien.github.io/CLP3/pretext/site/sec_chain_rule.html" target="_blank">CLP3 section 2.4</a>
 				</li>
+				<li>
+					<a href="../tutorials/tutorial02.pdf" target="_blank">Tutorial sheet 02</a>
+				</li>
+				<!-- <li>
+					<a href="../tutorials/tutorial02_solutions.pdf" target="_blank">Tutorial sheet 02 solutions</a>
+				</li> -->
 			</ul></td>
 		</tr>		<tr>
 			<td><strong>03</strong> &middot; 16/10/2023</td>
