--- a/schedule/index.html
+++ b/schedule/index.html
@@ -57,6 +57,12 @@ a:hover {
 					<li>
 						<a href="https://cocalc.com/share/public_paths/fb0010a374214b0c522563fb3a08abf3a3cf0910" target="_blank">CoCalc Sage worksheet</a> for investigating surface plots
 					</li>
+					<li>
+						Lecture <a href="https://youtu.be/o2yg9DPXENw" target="_blank">capture recording</a>
+					</li>
+					<li>
+						Lecture <a href="./pdf/multi-01_exp.pdf" target="_blank">boards</a>
+					</li>
 				</ul>
 			</td>
 		</tr>
