--- a/schedule/index.html
+++ b/schedule/index.html
@@ -63,6 +63,20 @@ a:hover {
 					<li>
 						Lecture <a href="./pdf/multi-01_exp.pdf" target="_blank">boards</a>
 					</li>
+					<li>
+						Video explanations of CLP Exercises 2.2.2 on partial differentiation
+					</li>
+					<ul>
+						<li>
+							<a href="https://youtu.be/zr9famFAuXs" target="_blank">Q3</a>
+						</li>
+						<li>
+							<a href="https://youtu.be/YgvnAgz9ejc" target="_blank">Q4 (c)</a>
+						</li>
+						<li>
+							<a href="https://youtu.be/iQKJQLc8vGQ" target="_blank">Q5</a>
+						</li>
+					</ul>
 				</ul>
 			</td>
 		</tr>
