--- a/schedule/index.html
+++ b/schedule/index.html
@@ -64,7 +64,7 @@ a:hover {
 						Lecture <a href="./pdf/multi-01_exp.pdf" target="_blank">boards</a>
 					</li>
 					<li>
-						Video explanations of CLP Exercises 2.2.2 on partial differentiation
+						Video explanations of CLP3 Exercises 2.2.2 on partial differentiation
 					</li>
 					<ul>
 						<li>
@@ -76,6 +76,7 @@ a:hover {
 						<li>
 							<a href="https://youtu.be/iQKJQLc8vGQ" target="_blank">Q5</a>
 						</li>
+						<a href="../notebooks/partial-differentiation-examples.ipynb" target="_blank">Jupyter notebbok</a> used in the videos, <a href="../notebooks/partial-differentiation-examples.html" target="_blank">html version.</a>
 					</ul>
 				</ul>
 			</td>
