--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,7 +76,9 @@ a:hover {
 						<li>
 							<a href="https://youtu.be/iQKJQLc8vGQ" target="_blank">Q5</a>
 						</li>
-						<a href="../notebooks/partial-differentiation-examples.ipynb" target="_blank">Jupyter notebbok</a> used in the videos, <a href="../notebooks/partial-differentiation-examples.html" target="_blank">html version.</a>
+						<li>
+							<a href="../notebooks/partial-differentiation-examples.ipynb" target="_blank">Jupyter notebook</a> used in the videos, <a href="../notebooks/partial-differentiation-examples.html" target="_blank">html version.</a>
+						</li>
 					</ul>
 				</ul>
 			</td>
