--- a/schedule/index.html
+++ b/schedule/index.html
@@ -103,6 +103,12 @@ a:hover {
 				<!-- <li>
 					<a href="../tutorials/tutorial02_solutions.pdf" target="_blank">Tutorial sheet 02 solutions</a>
 				</li> -->
+				<li>
+					Lecture <a href="https://youtu.be/EjmD40WyHMQ" target="_blank">capture recording.</a>
+				</li>
+				<li>
+					Lecture <a href="./pdf/multi02_exp.pdf" target="_blank">boards</a>.
+				</li>
 			</ul></td>
 		</tr>		<tr>
 			<td><strong>03</strong> &middot; 16/10/2023</td>
