--- a/schedule/index.html
+++ b/schedule/index.html
@@ -100,9 +100,9 @@ a:hover {
 				<li>
 					<a href="../tutorials/tutorial02.pdf" target="_blank">Tutorial sheet 02</a>
 				</li>
-				<!-- <li>
+				<li>
 					<a href="../tutorials/tutorial02_solutions.pdf" target="_blank">Tutorial sheet 02 solutions</a>
-				</li> -->
+				</li>
 				<li>
 					Lecture <a href="https://youtu.be/EjmD40WyHMQ" target="_blank">capture recording.</a>
 				</li>
@@ -124,6 +124,9 @@ a:hover {
 					<li>
 						Recommended reading: 
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/sec_lin_approx.html" target="_blank">CLP3 Sections 2.6 (incl. 2.6.2) and 2.9</a>
+					</li>
+					<li>
+						A further worked example of finding and classifying critical points <a href="https://www.youtube.com/watch?v=NAjTZ4-z2zo" target="_blank">Q.19 from Sec. 2.9.4 of CLP3.</a>
 					</li>
 				</ul>
 			</td>
