--- a/schedule/index.html
+++ b/schedule/index.html
@@ -126,6 +126,9 @@ a:hover {
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/sec_lin_approx.html" target="_blank">CLP3 Sections 2.6 (incl. 2.6.2) and 2.9</a>
 					</li>
 					<li>
+						A <a href="https://cocalc.com/share/public_paths/805e3a5f17dcca36d06ae9dd34aff1801c486c07" target="_blank">Sage worksheet</a> on CoCalc.com for exploring Taylor approximations.
+					</li>
+					<li>
 						A further worked example of finding and classifying critical points <a href="https://www.youtube.com/watch?v=NAjTZ4-z2zo" target="_blank">Q.19 from Sec. 2.9.4 of CLP3.</a>
 					</li>
 				</ul>
