--- a/schedule/index.html
+++ b/schedule/index.html
@@ -131,6 +131,12 @@ a:hover {
 					<li>
 						A further worked example of finding and classifying critical points <a href="https://www.youtube.com/watch?v=NAjTZ4-z2zo" target="_blank">Q.19 from Sec. 2.9.4 of CLP3.</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial03.pdf" target="_blank">Tutorial sheet 03</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial03_solutions.pdf" target="_blank">Tutorial sheet 03 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
