--- a/schedule/index.html
+++ b/schedule/index.html
@@ -137,6 +137,12 @@ a:hover {
 					<!-- <li>
 						<a href="../tutorials/tutorial03_solutions.pdf" target="_blank">Tutorial sheet 03 solutions</a>
 					</li> -->
+					<li>
+						Lecture <a href="https://youtu.be/6W7USGW757s" target="_blank">capture recording</a>.
+					</li>
+					<li>
+						Lecture <a href="./pdf/multi03_annotated.pdf" target="_blank">boards</a>.
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
