--- a/schedule/index.html
+++ b/schedule/index.html
@@ -143,6 +143,12 @@ a:hover {
 					<li>
 						Lecture <a href="./pdf/multi03_annotated.pdf" target="_blank">boards</a>.
 					</li>
+					<li>
+						The <a href="./pdf/tutorial03.pdf" target="_blank">handwritten pages</a> from Killian's tutorial.
+					</li>
+					<li>
+						The <a href="https://cocalc.com/share/public_paths/9d17b0eea6341c63e358e30186b0efda0c09f08e" target="_blank">Sage notebook</a> used by Killian in the tutorial.
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
