--- a/schedule/index.html
+++ b/schedule/index.html
@@ -166,6 +166,12 @@ a:hover {
 						Recommended reading: 
 						<a href="./line_integrals.pdf" target="_blank">Line integral notes</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial04.pdf" target="_blank">Tutorial sheet 04</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial04_solutions.pdf" target="_blank">Tutorial sheet 04 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
