--- a/schedule/index.html
+++ b/schedule/index.html
@@ -167,6 +167,12 @@ a:hover {
 						<a href="./line_integrals.pdf" target="_blank">Line integral notes</a>
 					</li>
 					<li>
+						Lecture <a href="https://youtu.be/N7IkBTko1_Q" target="_blank">capture recording</a>.
+					</li>
+					<li>
+						Lecture <a href="./pdf/multi-04-annotated.pdf" target="_blank">boards</a>.
+					</li>
+					<li>
 						<a href="../tutorials/tutorial04.pdf" target="_blank">Tutorial sheet 04</a>
 					</li>
 					<!-- <li>
