--- a/schedule/index.html
+++ b/schedule/index.html
@@ -195,6 +195,12 @@ a:hover {
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_integrals.html" target="_blank>">CLP3 Sections 3.1, 3.2 and 3.3 on double integrals</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial05.pdf" target="_blank">Tutorial sheet 04</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial05_solutions.pdf" target="_blank">Tutorial sheet 04 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
