--- a/schedule/index.html
+++ b/schedule/index.html
@@ -198,6 +198,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial05.pdf" target="_blank">Tutorial sheet 05</a>
 					</li>
+					<li>
+						Lecture <a href="https://youtu.be/XL1aYbhnM8c" target="_blank">capture recording</a>.
+					</li>
 					<!-- <li>
 						<a href="../tutorials/tutorial05_solutions.pdf" target="_blank">Tutorial sheet 04 solutions</a>
 					</li> -->
