--- a/schedule/index.html
+++ b/schedule/index.html
@@ -199,7 +199,10 @@ a:hover {
 						<a href="../tutorials/tutorial05.pdf" target="_blank">Tutorial sheet 05</a>
 					</li>
 					<li>
-						Lecture <a href="https://youtu.be/XL1aYbhnM8c" target="_blank">capture recording</a>.
+						Lecture <a href="https://youtu.be/XL1aYbhnM8c" target="_blank">capture recording</a>. Lecture <a href="./pdf/multi-05_annotated.pdf" target="_blank">boards</a>.
+					</li>
+					<li>
+						Tutorial <a href="https://youtu.be/YgfP-JpkR8M" target="_blank">capture recording</a>. Tutorial <a href="./pdf/fritutsw5_annotated.pdf" target="_blank">boards</a> (including linear algebra).
 					</li>
 					<!-- <li>
 						<a href="../tutorials/tutorial05_solutions.pdf" target="_blank">Tutorial sheet 04 solutions</a>
