--- a/schedule/index.html
+++ b/schedule/index.html
@@ -227,6 +227,12 @@ a:hover {
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_integrals.html" target="_blank">CLP3 Sections 3.2 and 3.8</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial06.pdf" target="_blank">Tutorial sheet 06</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial06_solutions.pdf" target="_blank">Tutorial sheet 06 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
