--- a/schedule/index.html
+++ b/schedule/index.html
@@ -230,6 +230,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial06.pdf" target="_blank">Tutorial sheet 06</a>
 					</li>
+					<li>
+						Lecture <a href="https://youtu.be/d4k3qsL3fMY" target="_blank">capture recording</a>. Lecture <a href="./pdf/multi-06_annotated.pdf" target="_blank">boards</a>.
+					</li>
 					<!-- <li>
 						<a href="../tutorials/tutorial06_solutions.pdf" target="_blank">Tutorial sheet 06 solutions</a>
 					</li> -->
