--- a/schedule/index.html
+++ b/schedule/index.html
@@ -233,9 +233,9 @@ a:hover {
 					<li>
 						Lecture <a href="https://youtu.be/d4k3qsL3fMY" target="_blank">capture recording</a>. Lecture <a href="./pdf/multi-06_annotated.pdf" target="_blank">boards</a>.
 					</li>
-					<!-- <li>
+					<li>
 						<a href="../tutorials/tutorial06_solutions.pdf" target="_blank">Tutorial sheet 06 solutions</a>
-					</li> -->
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
@@ -253,6 +253,21 @@ a:hover {
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_laplace.html" target="_blank">CLP3 Sections 4.1 &mdash; 4.6</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial07.pdf" target="_blank">Tutorial sheet 07</a>
+					</li>
+					<li>
+						<a href="../tutorials/tutorial07_solutions.pdf" target="_blank">Tutorial sheet 07 solutions</a>
+					</li>
+					<li>
+						Further reading, with worked examples and practice questions: Chapter 11 of <a href="https://mmu.on.worldcat.org/oclc/963785254" target="_blank"><em>Modern Engineering Mathematics</em></a> by Glyn James.
+					</li>
+					<li>
+						Revision on partial fraction expansions from <a href="https://killianobrien.github.io/CLP2/pretext/site/sec_parfrac.html" target="_blank"> CLP2 Section 1.10</a> and its subsections.
+					</li>
+					<li>video <a href="https://www.youtube.com/watch?v=UHvgevFqKxI" target="_blank" rel="noopener">solution for Example 4.5.2</a></li>
+					<li>video <a href="https://www.youtube.com/watch?v=FGdiGAIr3Io" target="_blank" rel="noopener">solution for Example 4.6.1</a></li>
+					<li>link to <a href="./coupledodes.mlx" target="_blank" rel="noopener">MATLAB live script file for solving Example 4.6.1</a></li>
 				</ul>
 			</td>
 		</tr>		<tr>
