--- a/schedule/index.html
+++ b/schedule/index.html
@@ -265,6 +265,9 @@ a:hover {
 					<li>
 						Revision on partial fraction expansions from <a href="https://killianobrien.github.io/CLP2/pretext/site/sec_parfrac.html" target="_blank"> CLP2 Section 1.10</a> and its subsections.
 					</li>
+					<li>
+						<a href="https://uk.mathworks.com/help/symbolic/dsolve.html" target="_blank" rel="noopener">Matlab's <span class="" style="font-family: 'Courier New', Courier, mono;">dsolve()</span> command</a> for solving ODEs
+					</li>
 					<li>video <a href="https://www.youtube.com/watch?v=UHvgevFqKxI" target="_blank" rel="noopener">solution for Example 4.5.2</a></li>
 					<li>video <a href="https://www.youtube.com/watch?v=FGdiGAIr3Io" target="_blank" rel="noopener">solution for Example 4.6.1</a></li>
 					<li>link to <a href="./coupledodes.mlx" target="_blank" rel="noopener">MATLAB live script file for solving Example 4.6.1</a></li>
