--- a/schedule/index.html
+++ b/schedule/index.html
@@ -254,6 +254,9 @@ a:hover {
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_laplace.html" target="_blank">CLP3 Sections 4.1 &mdash; 4.6</a>
 					</li>
 					<li>
+						Lecture <a href="https://youtu.be/5a2fOa1KMAs" target="_blank">capture recording</a>, and lecture <a href="./pdf/blankboardmulti-07_annotated.pdf" target="_blank">boards</a>.
+					</li>
+					<li>
 						<a href="../tutorials/tutorial07.pdf" target="_blank">Tutorial sheet 07</a>
 					</li>
 					<!-- <li>
