--- a/schedule/index.html
+++ b/schedule/index.html
@@ -259,9 +259,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial07.pdf" target="_blank">Tutorial sheet 07</a>
 					</li>
-					<!-- <li>
+					<li>
 						<a href="../tutorials/tutorial07_solutions.pdf" target="_blank">Tutorial sheet 07 solutions</a>
-					</li> -->
+					</li>
 					<li>
 						Further reading, with worked examples and practice questions: Chapter 11 of <a href="https://mmu.on.worldcat.org/oclc/963785254" target="_blank"><em>Modern Engineering Mathematics</em></a> by Glyn James.
 					</li>
@@ -291,6 +291,12 @@ a:hover {
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_laplace.html" target="_blank">CLP3 Sections 4.6 &mdash; 4.8</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial08.pdf" target="_blank">Tutorial sheet 08</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial08_solutions.pdf" target="_blank">Tutorial sheet 08 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
