--- a/schedule/index.html
+++ b/schedule/index.html
@@ -297,6 +297,9 @@ a:hover {
 					<!-- <li>
 						<a href="../tutorials/tutorial08_solutions.pdf" target="_blank">Tutorial sheet 08 solutions</a>
 					</li> -->
+					<li>
+						Lecture <a href="https://youtu.be/zhPJzAs6kBE" target="_blank">capture recording</a>, and lecture <a href="./pdf/multi-08_annotated.pdf" target="_blank">boards</a>.
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
