--- a/schedule/index.html
+++ b/schedule/index.html
@@ -294,9 +294,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial08.pdf" target="_blank">Tutorial sheet 08</a>
 					</li>
-					<!-- <li>
+					<li>
 						<a href="../tutorials/tutorial08_solutions.pdf" target="_blank">Tutorial sheet 08 solutions</a>
-					</li> -->
+					</li>
 					<li>
 						Lecture <a href="https://youtu.be/zhPJzAs6kBE" target="_blank">capture recording</a>, and lecture <a href="./pdf/multi-08_annotated.pdf" target="_blank">boards</a>.
 					</li>
@@ -317,6 +317,12 @@ a:hover {
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_fourier.html" target="_blank">CLP3 Sections 5.1 &mdash; 5.4</a>
 					</li>
+					<li>
+						<a href="../tutorials/tutorial09.pdf" target="_blank">Tutorial sheet 08</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/tutorial09_solutions.pdf" target="_blank">Tutorial sheet 08 solutions</a>
+					</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
