--- a/schedule/index.html
+++ b/schedule/index.html
@@ -329,6 +329,9 @@ a:hover {
 						<li>
 							Further detailed reading, with applications: <a href="https://mmu.on.worldcat.org/oclc/963785254" target="_blank" rel="noopener"><em>Modern Engineering Mathematics</em>, by Glyn James: Chapter 12</a>
 						</li>
+						<li>
+							Lecture <a href="https://youtu.be/UPR2rXiEAbo" target="_blank">capture recording</a>, and lecture <a href="./pdf/multi-09_annotated.pdf" target="_blank">boards</a>.
+						</li>
 				</ul>
 			</td>
 		</tr>		<tr>
