--- a/schedule/index.html
+++ b/schedule/index.html
@@ -320,9 +320,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial09.pdf" target="_blank">Tutorial sheet 09</a>
 					</li>
-					<!-- <li>
+					<li>
 						<a href="../tutorials/tutorial09_solutions.pdf" target="_blank">Tutorial sheet 09 solutions</a>
-					</li> -->
+					</li>
 					<li>
 						link to <a href="https://sagecell.sagemath.org/?z=eJyVUk2P2jAQva_EfxipkWKDgZhd9bDaVD311gppe0SLTHA2VmM7tR3ICvHfO05gqwKtVB_yMX7vzcyb2QlH0i6lo7vR3QcIlYTS1rXdK_MKYW-hbE0RlDUeCnwE1xahR32xrVPSgZf48mDLPho1_M9WOAl7sZPv7Bk8SwmyE7qpJdzPHqB0VvcUY4P0MftWlifuOnLXZZBOE00fR3eAx8nQOkMWc0IWYw1T4HTcKApj8MqcYhjqKB3w_z7X6YZGiLnIx-cLmIBvNblVG5rlQIMy4IR5lYQzM-GU9m42qBDe1o1TJpAq6Jq49Km6__S9Uh6a2gbwld373gTRNM52SotoFpBN3UoKwfZ3t_wE4uSWApJ2aiu3sHkbRqeMClezSZJV6URx4MfD4ojNDH-L42HVqCOssLf1weT8-KLhN9BMebzrrcVv2tFZksBXi0X0RdWY18USiyp2Poyy1RsMxl1AezCxSWZPc2w5jY58Rh8kyofB--jAqVBi8kGPZAx4ljHOeMbSb5dyOoEcpU4DuvY3fa5Oi_tXL_4w-jE9L0tPr0WQHSE3l4Kekcs8Fn4bxEjHpo1iuJbv6OWkx_N4l8UbVtjaujzFAaYsVKr4YaT3-QMDUTeVyLPZx0tydhbO_oMdl4ss6S96oDjz&amp;lang=sage&amp;interacts=eJyLjgUAARUAuQ==" target="_blank" rel="noopener">Sagecell interactive plot</a> displaying partial sums of the Fourier series of the square wave function
 						</li>
@@ -348,6 +348,15 @@ a:hover {
 					<li>
 						Recommended reading:
 						<a href="https://killianobrien.github.io/CLP3/pretext/site/chap_fourier.html" target="_blank">CLP3 Section 5.5</a>
+					</li>
+					<li>
+						<a href="../tutorials/tutorial10.pdf" target="_blank">Tutorial sheet 09</a>
+					</li>
+					<!-- <li>
+						<a href="../tutorials/XXXXXX" target="_blank">Tutorial sheet 09 solutions</a>
+					</li> -->
+					<li>
+						Further detailed reading, with applications: <a href="https://mmu.on.worldcat.org/oclc/963785254" target="_blank" rel="noopener"><em>Modern Engineering Mathematics</em>, by Glyn James: Chapter 12</a>
 					</li>
 				</ul>
 			</td>
