--- a/schedule/index.html
+++ b/schedule/index.html
@@ -358,6 +358,9 @@ a:hover {
 					<li>
 						Further detailed reading, with applications: <a href="https://mmu.on.worldcat.org/oclc/963785254" target="_blank" rel="noopener"><em>Modern Engineering Mathematics</em>, by Glyn James: Chapter 12</a>
 					</li>
+					<li>
+						Lecture <a href="https://youtu.be/GRCg7VExBfY" target="_blank">capture recording</a>, and lecture <a href="./pdf/multi-10_annotated.pdf" target="_blank">boards</a>.
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
