--- a/schedule/index.html
+++ b/schedule/index.html
@@ -361,6 +361,11 @@ a:hover {
 					<li>
 						Lecture <a href="https://youtu.be/GRCg7VExBfY" target="_blank">capture recording</a>, and lecture <a href="./pdf/multi-10_annotated.pdf" target="_blank">boards</a>.
 					</li>
+					<li>
+						Tutorial <a href="https://youtu.be/Zw3HtGVGLQA" target="_blank">capture recording</a>, and tutorial <a href="./pdf/linalg-10_annotated.pdf" target="_blank">boards</a>. This is the double tutorial, first linear algebra, then this multi-calculus and analytical methods unit. 
+					</li>
+
+					
 				</ul>
 			</td>
 		</tr>		<tr>
