--- a/schedule/index.html
+++ b/schedule/index.html
@@ -352,9 +352,9 @@ a:hover {
 					<li>
 						<a href="../tutorials/tutorial10.pdf" target="_blank">Tutorial sheet 10</a>
 					</li>
-					<!-- <li>
-						<a href="../tutorials/XXXXXX" target="_blank">Tutorial sheet 10 solutions</a>
-					</li> -->
+					<li>
+						<a href="../tutorials/tutorial10_solutions.pdf" target="_blank">Tutorial sheet 10 solutions</a>
+					</li>
 					<li>
 						Further detailed reading, with applications: <a href="https://mmu.on.worldcat.org/oclc/963785254" target="_blank" rel="noopener"><em>Modern Engineering Mathematics</em>, by Glyn James: Chapter 12</a>
 					</li>
