--- a/schedule/index.html
+++ b/schedule/index.html
@@ -385,10 +385,9 @@ a:hover {
 					<li>
 						Lecture <a href="https://youtu.be/9BH-QWtCmAE" target="_blank">capture recording</a>, and lecture <a href="./pdf/multi-11.pdf" target="_blank">boards</a>.
 					</li>
-					<!-- <li>
-						Tutorial <a href="https://youtu.be/Zw3HtGVGLQA" target="_blank">capture recording</a>, and tutorial <a href="./pdf/linalg-10_annotated.pdf" target="_blank">boards</a>. This is the double tutorial, first linear algebra, then this multi-variable calculus and analytical methods unit. 
-					</li> -->
-					
+					<li>
+						Tutorial <a href="https://youtu.be/l8eBpO4YGQg" target="_blank">capture recording</a>, and tutorial <a href="./pdf/tutorials-w11_annotated.pdf" target="_blank">boards</a>. This is the double tutorial, *Further Linear Algebra*, and *Multi-variable Calculus and Analytical Methods*. 
+					</li>
 				</ul>
 			</td>
 		</tr>
